2006-10-24  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* tools/Makefile.am: Add ASM_JAR define to each tool's CFLAGS.
	* tools/toolwrapper.c (main): Set bootclasspath, not classpath.
	Add ASM_JAR to bootclasspath.

2006-10-24  Tania Bento  <tbento@redhat.com>

	* java/awt/Scrollbar.java:
	(setLineIncrement): Removed unnecessary if-clause and if 
	lineIncrement == 0, then it should be set to 1, not 0.
	(setPageIncrement): Removed unnecessary if-clause and if
	pageIncrement == 0, then it should be set to 1, not 0.
	(setValues): If visibleAmount <= 0, it should be set to 1, not 0.
	If maximum <= minimum, maximum should be set to mininum + 1. The
	actual value of maximum is maximum - visibleAmount, so I made 
	this change to the appropriate if-check. Remove the two unneccessary
	if-clauses.

2006-10-23  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(cairoSetFont): New method.
	(copy): Set font using setFont method.
	(setFont): Call cairoSetFont.
	(setup): Set font using setFont method.
	* include/gnu_java_awt_peer_gtk_CairoGraphics2D.h: Added method.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_CairoGraphics2D.c
	(install_font_peer): Removed.
	(cairoDrawGlyphVector): Removed call to install_font_peer.
	(cairoSetFont): New method.

2006-10-23  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/java/awt/peer/NativeEventLoopRunningEvent.java: New file.
	* gnu/java/awt/peer/gtk/GtkMainThread.java: Post
	NativeEventLoopRunningEvent after GTK main loop start and stop.
	* java/awt/EventQueue.java (isShutdown): Check nativeLoopRunning.
	(getNextEvent): Set dispatchThread to null.
	(postEventImpl): Set nativeLoopRunning.
	(pop): Interrupt event dispatch thread.
	* java/awt/Frame.java (noteFrame): Synchronize on weakFrames.

2006-10-22  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/java-net/gnu_java_net_VMPlainSocketImpl.c (config-int.h):
	Added include.
	* native/jni/java-nio/gnu_java_nio_VMChannel.c (config-int.h):