@@ -1,3 +1,13 @@
+2006-10-25  Robert Schuster  <robertschuster@fsfe.org>
+
+	Fixes PR29576
+	* java/net/NetworkInterface.java:
+	(createAnyInterface): New method.
+	(equals): Added if-statement to handle case where netif.name is null.
+	* vm/reference/java/net/VMNetworkInterface.java:
+	(hashCode): Rewritten.
+	(VMNetworkInterface): New constructor.
+
 2006-10-24  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* tools/Makefile.am: Add ASM_JAR define to each tool's CFLAGS.
